--- a/ios-browser-ui-viewport-bug/src/index.html
+++ b/ios-browser-ui-viewport-bug/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>IosBrowserUiViewportBug</title>
-  <base href="/">
+  <base href="/ios-viewport-fail/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
